[SPv175+] Correct SVG mask clip

Consider <mask> element's bounds.

Bug: 807379
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I2f78202095881318f9d8b09c190354ea2b9decd6
Reviewed-on: https://chromium-review.googlesource.com/896232
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533590}
Former-commit-id: 04e20c3f63e2f9691ccaba746a71b6eb067d0639